--- a/css/styles.css
+++ b/css/styles.css
@@ -1,18 +1,78 @@
 /* styles.css */
 body {
   font-family: Arial, sans-serif;
+  margin: 0;
+  background-color: #0a0a0a;
+}
+
+.header-top {
+  display: flex;
+  align-items: center;
+  background-color: #0a0a0a;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  z-index: 1000;
+  margin: 0;
+  top: 0;
+}
+
+.header-top h1 {
+  color: red;
+  padding: 10px;
+}
+
+nav ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+}
+
+h1 { margin:0;}
+
+a { 
+  text-decoration: none;
+  color: white;
+  font-weight: 700;
+  padding: 20px;
+}
+
+section {
+  scroll-margin-top: 100px; /* Para que no se solape con el header */
 }
 
 .genero-container {
   margin: 20px;
+  margin-top: 80px;
   padding: 20px;
-  border: 1px solid #ccc;
-  background-color: #f8f8f8;
+  background-color: #2b2b2b;
+  color: white;
 }
 
 h2 {
-  font-size: 1.5rem;
-  margin-bottom: 10px;
+  font-size: 24px;
+  margin-bottom: 20px;
 }
 
+.genero {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
 
+.pelicula {
+  width: 200px;
+}
+
+.pelicula img {
+  width: 100%;
+}
+
+.pelicula img:hover {
+  transform: scale(1.5);
+  transition: all 0.3s linear;
+}
+
+h3 {
+  font-weight: 300;
+}
